# agentguard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  agentguard.yaml  config.yaml  gate.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hooks/: pre-commit
qg/: __init__.py  __main__.py  auditor.py  committer.py  config.py  dashboard.py  engine.py  fixer.py  main.py  models.py  reporter.py  scanner.py  scorer.py  suppress.py  testgen.py  verifier.py
qg/rules/: ai_hallucination.py  bare_except.py  base.py  compare_with_is.py  exception_quality.py  hardcoded_config.py  hardcoded_paths.py  logging_quality.py  mutable_defaults.py  path_traversal.py  performance.py  placeholder_check.py  ruff_blocker.py  ruff_fixable.py  secret_leak.py  sql_injection.py  syntax_check.py  unsafe_api.py
tests/: __init__.py  test_cli.py  test_models.py  test_rules.py  test_scanner.py
