[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentguard"
version = "1.0.0"
description = "AI-native quality gate for agent-generated code — scan, audit, auto-fix, trend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hermes Labs"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "ruff>=0.4.0",
]

[project.scripts]
gate = "qg.__main__:main"
agentguard = "qg.__main__:main"

[project.urls]
Homepage = "https://github.com/hermes-labs/agentguard"
Issues = "https://github.com/hermes-labs/agentguard/issues"

[tool.setuptools.packages.find]
include = ["qg", "qg.*"]

[tool.setuptools.package-data]
"qg" = ["py.typed"]
