[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-tool"
version = "1.0.3"
description = "AI-native quality gate for agent-generated code — scan, audit, auto-fix, trend"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Hermes Labs"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "ruff>=0.4.0",
]

[project.scripts]
gate = "qg.__main__:main"
agentguard = "qg.__main__:main"

[project.urls]
Homepage = "https://github.com/weijinsheng123456/agentguard"
Issues = "https://github.com/weijinsheng123456/agentguard/issues"

[tool.setuptools.packages.find]
include = ["qg", "qg.*"]

[tool.setuptools.package-data]
"qg" = ["py.typed"]
